--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -100,6 +100,54 @@ body {
                          <div class="image"><img src="https://kefr7t.github.io/islt_7310/Fall 2022 GPO Welcome Event (1).png">
                                               <br>
                                                <div class="image"><img src="https://kefr7t.github.io/islt_7310/2022 Request for Feedback for Fall Welcome Event.png">
+               <!--
+*****************************************************************************
+Test lines
+******************************************************************************
+-->
+
+<div class="carousel">
+    <div class="carousel-inner">
+        <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
+        <div class="carousel-item">
+            <img src="https://kefr7t.github.io/islt_7310/Fall 2022 GPO Welcome Event (1).png">
+        </div>
+        <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
+        <div class="carousel-item">
+            <img src="https://kefr7t.github.io/islt_7310/2022 Request for Feedback for Fall Welcome Event.png">
+        </div>
+        <label for="carousel-3" class="carousel-control prev control-1">‹</label>
+        <label for="carousel-2" class="carousel-control next control-1">›</label>
+        <label for="carousel-1" class="carousel-control prev control-2">‹</label>
+        <label for="carousel-3" class="carousel-control next control-2">›</label>
+        <label for="carousel-2" class="carousel-control prev control-3">‹</label>
+        <label for="carousel-1" class="carousel-control next control-3">›</label>
+        <ol class="carousel-indicators">
+            <li>
+                <label for="carousel-1" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-2" class="carousel-bullet">•</label>
+            </li>
+            <li>
+                <label for="carousel-3" class="carousel-bullet">•</label>
+            </li>
+        </ol>
+    </div>
+</div>
+
+               <!--
+*****************************************************************************
+Test lines
+******************************************************************************
+-->
+
+
+
+
+
+
+                                                 
 
                                                                     <br>
                    </article>
