--- a/islt_7310/contact.html
+++ b/islt_7310/contact.html
@@ -63,7 +63,7 @@ body {
               <input type="text" id="lname" name="lastname" placeholder="Your last name" required>
           
               <label for="email">Email</label>
-              <input type="text" id="email" name="email" placeholder="Email" required>
+              <input type="email" id="email" name="email" placeholder="Email" required>
           
               <label for="subject">Subject</label>
               <textarea id="subject" name="subject" placeholder="Leave me a message!" style="height:200px" required></textarea>
@@ -73,7 +73,7 @@ body {
           </div>
                <nav>
                     <ul>
-                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/about.html">Return to Main Site</a></li>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Return to Main Site</a></li>
                     </ul>
                </nav>
     </main>
