--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -59,7 +59,7 @@ body {
                         <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
                         <ul>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Professional Development Series</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
+                            <li> <a id="#transferequivalencyguides"><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
                         </li>
                         </ul>
@@ -82,7 +82,7 @@ body {
   <br>
   <div class="image"><img src="https://kefr7t.github.io/islt_7310/Copy of Spring 2021 Advisors Forum Newsletter.png">
   <br>
-<h3>Transfer Equivalency Guides</h3>
+<h3 id="transferequivalencyguides>Transfer Equivalency Guides</h3>
                         <p>Transfer students coming into a new university can feel overwhelmed, underprepared, and like they do not have the same welcome as traditional students. To combat some of this, an area I was advising in started creating transfer guides for these students (and their advisors) to help boost transparency. Partnering with the key campus players, I created transfer equivalency guides to assist students transferring from community colleges into the MU College of Health Sciences. I then completed the subsequent guides for the community colleges we saw the most transfers from. This included an individual guide specific to every major offered in the College of Health Sciences.</p>
                         <br>
 <div class="image"><img src="https://kefr7t.github.io/islt_7310/Transfer Guide.png">
