--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -59,7 +59,7 @@ body {
                         <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
                         <ul>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Professional Development Series</a></li>
-                            <li> <a id="#transferequivalencyguides"><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#"><a id="#transferequivalencyguides">Transfer Equivalency Guides</a></a></li>
                             <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
                         </li>
                         </ul>
